--- a/views/entreprises/inscription-entreprise.ejs
+++ b/views/entreprises/inscription-entreprise.ejs
@@ -36,7 +36,7 @@
                         <span>Facturation</span>
                         <span class="nav-badge">3</span>
                     </a>
-                    <a href="/entreprise/rapports" class="nav-link">
+                    <a href="/entreprise/rapport-formation" class="nav-link">
                         <span class="nav-icon">📈</span>
                         <span>Rapports de formation</span>
                     </a>
@@ -87,7 +87,7 @@
             </div>
             
             <div class="header-right">
-                <a href="/entreprise/inscriptions/historique" class="btn-secondary">
+                <a href="/entreprise/inscription/historique" class="btn-secondary">
                     <span>📋</span>
                     <span>Historique</span>
                 </a>
