--- a/views/entreprises/rapport-formation-entreprise.ejs
+++ b/views/entreprises/rapport-formation-entreprise.ejs
@@ -427,7 +427,7 @@
                         <span>Mes salariés</span>
                         <span class="nav-badge">24</span>
                     </a>
-                    <a href="/entreprise/inscriptions" class="nav-link">
+                    <a href="/entreprise/inscription" class="nav-link">
                         <span class="nav-icon">✍️</span>
                         <span>Inscriptions</span>
                     </a>
